--- a/updated/disc20repartition_feedback.tex
+++ b/updated/disc20repartition_feedback.tex
@@ -1587,7 +1587,7 @@ and alternative algorithms.
 			\includegraphics*[width=\linewidth]{new_time_all_filtered_coreDel}
 			\caption{Runtime results for \coreDel{}}
 		\end{subfigure}
-		\caption{Comparison of the running times of \adjDel{} (top left), \directDecomp{} (top right) and \coreDel{} (bottom) for all 3 data sets}\label{fig:all_runtimes_boxplot}
+		\caption{Comparison of the runtimes of \adjDel{} (top left), \directDecomp{} (top right) and \coreDel{} (bottom) for all 3 data sets}\label{fig:all_runtimes_boxplot}
 	\end{figure}
 
 \cref{fig:all_runtimes_boxplot} shows the results of all data sets for \adjDel{} and \directDecomp{}.  Here
@@ -1633,7 +1633,7 @@ We first compare the runtimes of the three algorithms for the hpc data sets befo
 			\caption{Total time for \coreDel{}}
 		\end{subfigure}		
 	\end{minipage}
-	\caption{Comparison of the running times of \adjDel{} (top), \directDecomp{} (middle) and \coreDel{}(bottom) for both hpc traces}\label{fig:hpc_runtimes_boxplot_restricted}
+	\caption{Comparison of the runtimes of \adjDel{} (top), \directDecomp{} (middle) and \coreDel{}(bottom) for both hpc traces}\label{fig:hpc_runtimes_boxplot_restricted}
 \end{figure}
 
 \cref{fig:hpc_runtimes_boxplot_restricted} shows plots of run times of \adjDel{}, 
