improved component definitions

--- a/updated/disc20repartition_feedback.tex
+++ b/updated/disc20repartition_feedback.tex
@@ -386,7 +386,7 @@ we will also use $1+\epsilon$ as the basis for the logarithm.
 We first describe the basic algorithm underlying
 our approach, before presenting the polynomial-time implementation
 later in this paper.
-In general, \adjDel{} relies on a second-order partitioning of the communication nodes into \textit{communication components} which represent node-induced sub-graphs of the original communication graph given by the requests from the input sequence $\sigma$. \new{To this end we define a \textit{component} $C$ as the set of its nodes together with the time $t$ of its creation, i.e. $C=(\{v_1,v_2,...,v_k\}, t)$. For a component $B=(M, t)$ let $nodes(B)=M$ and $\tau(B)=t$}.
+In general, \adjDel{} relies on a second-order partitioning of the communication nodes into \textit{communication components} which represent node-induced sub-graphs of the original communication graph given by the requests from the input sequence $\sigma$. \new{To this end we define a \textit{component} $C$ as the set of its nodes together with the time $t$ of its creation, i.e. $C=(\{v_1,v_2,...,v_k\}, t)$. For a component $B=(M, t)$ let $nodes(B)=M$, $\tau(B)=t$ and we define $|B|=|M|$ in order to improve readability}.
 Initially each node forms a singleton component, but as the input sequence $\sigma$ is revealed, new communication patterns unfold. The algorithm keeps track of these patterns by maintaining a graph in which the nodes represent the actual communication nodes and the weighted edges represent the number of communication requests between nodes that were part of different components at the time of the request; that is, 
 for edge $e=\{u,v\}$, $w(e)$ represents the number of paid communication requests between $u$ and $v$. We say that a communication request between nodes $u$ and $v$ is \textit{paid} if the nodes are located on different servers at the time of the request.
 The algorithm merges a set $S$ of components into a new component $C$ if the connectivity of the component graph induced by the components in $S$ is at least $\alpha$. After each edge insertion the algorithm checks whether there exists a new component set $S$ with $|S|>1$ which fulfills this requirement.
